styles.css
/* ... */
a:hover,
li:hover,
.nav-bar-component li:hover,
.nav-bar-component :hover .title {
	text-decoration: none !important;
}

p,
.layout-component .layout-text-component p,
.layout-component .layout-text-component li,
.layout-component .layout-html-component p,
.layout-component .layout-html-component li {
	font-size: 1rem;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
}

h1,
.layout-component .block-content h1 {
	font-size: calc((36 / 16) * 1rem);
}

@media screen and (min-width: 45.625em) {
	h1,
	.layout-component .block-content h1 {
		font-size: calc((41 / 16) * 1rem);
	}
}

@media screen and (min-width: 56.25em) {
	h1,
	.layout-component .block-content h1 {
		font-size: calc((46 / 16) * 1rem);
	}
}

h2,
.layout-component .block-content h2 {
	font-size: calc((26 / 16) * 1rem);
}

h3,
.layout-component .block-content h3 {
	font-size: calc((22 / 16) * 1rem);
}

h4,
.layout-component .block-content h4 {
	font-size: calc((20 / 16) * 1rem);
}

h5,
.layout-component .block-content h5 {
	font-size: calc((18 / 16) * 1rem);
}

h6,
.layout-component .block-content h6 {
	font-size: 1rem;
}

header.header-component {
	display: none;
}
.nav-bar-component,
.footer-component {
	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
	font-size: 0.875rem;
	text-transform: none;
	height: 100%;
}
.nav-bar-component {
	margin-top: calc((54 / 16) * 1rem);
	margin-bottom: calc((42 / 16) * 1rem);
}
.nav-bar-component.accent-color {
	border-bottom: 0 !important;
}
.nav-bar-component .scrollable-nav {
	line-height: 0;
	overflow: hidden;
}
.nav-bar-component .scrollable-nav .overflow-gradient {
	background: none;
	border-bottom: 0;
	top: 40px;
	left: 165px;
	width: 98%;
	height: auto;
}
.nav-bar-component .container {
	padding-left: 0;
	padding-right: 0;
	width: 98%;
}
.nav-bar-component .container .col-12 {
	width: 100%;
	margin-right: 0;
}
.nav-bar-component a {
	height: 100%;
	margin: 0;
	padding-left: 0;
	padding-right: 0.75rem;
}
.nav-bar-component li a {
	text-transform: none;
	margin: 0;
	margin-left: calc((18 / 16) * 1rem);
	font-size: 0.875rem;
	font-weight: 600;
	line-height: 24px;
}
.nav-bar-component li a:hover {
	color: #087acc;
}
.nav-bar-component li a .bp3-icon-share {
	display: none;
}
.nav-bar-component ul.nav-list {
	height: 30px;
	align-items: center;
}
.nav-bar-component ul.nav-list > :first-child {
	padding-top: 0;
	margin-right: calc((21 / 16) * 1rem);
	padding-left: calc((21 / 16) * 1rem);
	border-right: 1px #e0e0e0 solid;
}
.nav-bar-component ul.nav-list > :nth-child(2):before {
	background-image: url('https://ui-patterns.elifesciences.org/assets/img/patterns/molecules/nav-primary-menu-ic.svg');
	background-size: 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
}
.nav-bar-component ul.nav-list > :nth-child(2) li {
	display: none;
}
.nav-bar-component ul.nav-list > :nth-child(7),
.nav-bar-component ul.nav-list > :nth-child(8),
.nav-bar-component ul.nav-list > :nth-child(9) {
	align-items: center;
}
.nav-bar-component ul.nav-list > :nth-child(7) {
	margin-left: auto;
}

.nav-bar-component ul.nav-list > :nth-child(7) a,
.nav-bar-component ul.nav-list > :nth-child(8) a {
	display: flex;
}

.nav-bar-component ul.nav-list > :nth-child(7) a:after {
	background-image: url('https://ui-patterns.elifesciences.org/assets/img/patterns/molecules/nav-secondary-search-black-ic.svg');
	background-size: 24px 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
	margin-left: calc((4 / 16) * 1rem);
}
.nav-bar-component ul.nav-list > :nth-child(8) a:after {
	background-image: url('https://elifesciences.org/assets/patterns/img/patterns/molecules/nav-secondary-alert-black-ic.e9bb80fe.svg');
	background-size: 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
	margin-left: calc((4 / 16) * 1rem);
}

.nav-bar-component ul.nav-list > :last-child a:hover {
	color: white;
	background-color: #0769b0;
}

.nav-bar-component ul.nav-list > :last-child a {
	display: flex;
	text-transform: uppercase;
	margin-right: calc((66 / 16) * 1rem);
	padding: 0 calc((8 / 16) * 1rem);
	margin-left: calc((21 / 16) * 1rem);
	border-radius: 3px;
	color: #fff;
	background-color: #087acc;
	border: 1px solid #087acc;
	height: calc((22 / 16) * 1rem);
	font-size: calc((11 / 16) * 1rem);
	font-weight: 400;
}

.nav-bar-component ul.nav-list > :first-child .title,
.nav-bar-component ul.nav-list > :first-child > li {
	display: none;
}
.nav-bar-component ul.nav-list > :first-child a {
	display: flex;
}
.nav-bar-component ul.nav-list > :first-child a:before {
	background-image: url('https://assets.pubpub.org/pm5kgkt7/41674145834317.svg');
	background-size: 88px 35px;
	display: inline-block;
	width: 88px;
	height: 35px;
	content: '';
}

@media only screen and (min-width: 1200px) {
	.nav-bar-component .scrollable-nav .overflow-gradient {
		display: block;
	}
}

/** Pub Body Header Hiding **/
.pub-header-component {
	display: none;
}

.user-member .pub-header-component {
	display: block;
}

.user-member .pub-header-component .background-element {
	display: none;
}

.user-member .pub-header-component .pub-header-content-component > * {
	display: none;
}

.user-member .pub-header-component .pub-header-content-component .draft-release-buttons-component {
	display: block;
}

.pub-body-component .editor .figure > .iframe {
	height: 100%;
}

/** FOOTER **/
.footer-component {
	border-top: 1px #e0e0e0 solid;
}

.footer-component .container {
	width: 100%;
	max-width: unset;
	margin: 0;
}

.footer-component .container .row .col-12 {
	margin: 0;
	width: 100%;
}

.footer-component .right {
	text-align: center;
	max-width: unset;
}
/* ... */

